--- a/tests/FluidMechanics/CMakeLists.txt
+++ b/tests/FluidMechanics/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(COPY input/ DESTINATION input)
 add_executable(Darcy Darcy.F90)
 set_target_properties(Darcy PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(Darcy iron)
+target_link_libraries(Darcy ${OpenCMISS_SHARED_Fortran_TARGET})
 add_custom_command(TARGET Darcy POST_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory output)
 oc_add_test(FluidMechanics_Darcy_Poly Darcy 1 test1)
 oc_add_test(FluidMechanics_Darcy_Exp Darcy 2 test2)
