--- a/tests/ClassicalField/CMakeLists.txt
+++ b/tests/ClassicalField/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(Laplace Laplace.F90)
 set_target_properties(Laplace PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(Laplace iron)
+target_link_libraries(Laplace ${OpenCMISS_SHARED_Fortran_TARGET})
 oc_add_test(ClassicalField_Laplace Laplace)
 oc_add_test(ClassicalField_Laplace_5_0_0_I1 Laplace 5 0 0 1)
 oc_add_test(ClassicalField_Laplace_5_0_0_I2 Laplace 5 0 0 2)
@@ -14,22 +14,22 @@ oc_add_test(ClassicalField_Laplace_5_5_5_I7 Laplace 5 5 5 7)
 
 add_executable(AnalyticLaplace AnalyticLaplace.F90)
 set_target_properties(AnalyticLaplace PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(AnalyticLaplace iron)
+target_link_libraries(AnalyticLaplace ${OpenCMISS_SHARED_Fortran_TARGET})
 oc_add_test(ClassicalField_AnalyticLaplace AnalyticLaplace)
 
 add_executable(Analytic1DDiffusion Analytic1DDiffusion.F90)
 set_target_properties(Analytic1DDiffusion PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(Analytic1DDiffusion iron)
+target_link_libraries(Analytic1DDiffusion ${OpenCMISS_SHARED_Fortran_TARGET})
 oc_add_test(ClassicalField_Analytic1DDiffusion Analytic1DDiffusion)
 
 add_executable(AnalyticHelmholtz AnalyticHelmholtz.F90)
 set_target_properties(AnalyticHelmholtz PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(AnalyticHelmholtz iron)
+target_link_libraries(AnalyticHelmholtz ${OpenCMISS_SHARED_Fortran_TARGET})
 oc_add_test(ClassicalField_AnalyticHelmholtz AnalyticHelmholtz)
 
 add_executable(AnalyticNonlinearPoisson AnalyticNonlinearPoisson.F90)
 set_target_properties(AnalyticNonlinearPoisson PROPERTIES LINKER_LANGUAGE Fortran)
-target_link_libraries(AnalyticNonlinearPoisson iron)
+target_link_libraries(AnalyticNonlinearPoisson ${OpenCMISS_SHARED_Fortran_TARGET})
 
 oc_add_test(ClassicalField_AnalyticNonlinearPoisson AnalyticNonlinearPoisson)
 oc_add_test(ClassicalField_AnalyticNonlinearPoisson_5_5_0_I1 AnalyticNonlinearPoisson 5 5 0 1)
