--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,6 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OpenCMISS_CMAKE_DIR}")
 get_property(OpenCMISS_HAVE_MULTICONFIG_ENV GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
 if(OpenCMISS_HAVE_MULTICONFIG_ENV)
   string(TOUPPER "$<$<CONFIG>>" OpenCMISS_CONFIG_TYPE)
-else()
   string(TOUPPER "${CMAKE_BUILD_TYPE}" OpenCMISS_CONFIG_TYPE)
 endif()
 if(OpenCMISS_CONFIG_TYPE MATCHES "^(DEBUG|RELWITHDEBINFO)$")
@@ -98,12 +97,23 @@ endif()
 
 # Options for installation
 include(GNUInstallDirs)
-set(OpenCMISS_INSTALL_BIN_DIR "${CMAKE_INSTALL_BINDIR}" CACHE PATH "Installation directory for OpenCMISS executables.")
-set(OpenCMISS_INSTALL_LIB_DIR "${CMAKE_INSTALL_LIBDIR}" CACHE PATH "Installation directory for OpenCMISS libraries.")
-set(OpenCMISS_INSTALL_INC_DIR "${CMAKE_INSTALL_INCLUDEDIR}" CACHE PATH "Installation directory for OpenCMISS headers.")
-set(OpenCMISS_INSTALL_DATA_DIR "${CMAKE_INSTALL_DATAROOTDIR}" CACHE PATH "Installation directory for OpenCMISS data.")
-set(OpenCMISS_INSTALL_DOC_DIR "${CMAKE_INSTALL_DOCDIR}" CACHE PATH "Installation directory for OpenCMISS documents.")
-set(OpenCMISS_INSTALL_MAN_DIR "${CMAKE_INSTALL_MANDIR}" CACHE PATH "Installation directory for OpenCMISS manual pages.")
+set(OpenCMISS_INSTALL_BIN_SUBDIR "${CMAKE_INSTALL_BINDIR}" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX for OpenCMISS executables.")
+set(OpenCMISS_INSTALL_LIB_SUBDIR "${CMAKE_INSTALL_LIBDIR}" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX for OpenCMISS libraries.")
+set(OpenCMISS_INSTALL_INC_SUBDIR "${CMAKE_INSTALL_INCLUDEDIR}" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX for OpenCMISS headers.")
+set(OpenCMISS_INSTALL_INC_SUBSUBDIR "/opencmiss" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX/OpenCMISS_INSTALL_INC_SUBDIR for OpenCMISS headers.")
+set(OpenCMISS_INSTALL_DATA_SUBDIR "${CMAKE_INSTALL_DATAROOTDIR}" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX for OpenCMISS data.")
+set(OpenCMISS_INSTALL_DOC_SUBDIR "${CMAKE_INSTALL_DOCDIR}" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX for OpenCMISS documents.")
+set(OpenCMISS_INSTALL_MAN_SUBDIR "${CMAKE_INSTALL_MANDIR}" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX for OpenCMISS manual pages.")
+set(OpenCMISS_INSTALL_CMAKE_CONFIG_SUBDIR "/cmake" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX/OpenCMISS_INSTALL_LIB_SUBDIR for OpenCMISS CMake configuration files.")
+set(OpenCMISS_INSTALL_PKGCONFIG_SUBDIR "/pkconfig" CACHE PATH "Sub-directory under CMAKE_INSTALL_PREFIX/OpenCMISS_INSTALL_DATA_SUBDIR for OpenCMISS Pkg-config files.")
+
+# Further install location variables
+set(OpenCMISS_INSTALL_INCLUDE_SUBDIR "${OpenCMISS_INSTALL_INC_SUBDIR}${OpenCMISS_INSTALL_INC_SUBSUBDIR}" CACHE PATH "Installation directory for OpenCMISS include files.")
+set(OpenCMISS_INSTALL_CMAKE_SUBDIR "${OpenCMISS_INSTALL_LIB_SUBDIR}${OpenCMISS_INSTALL_CMAKE_CONFIG_SUBDIR}" CACHE PATH "Installation directory for OpenCMISS cmake files.")
+set(OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR "${OpenCMISS_INSTALL_CMAKE_SUBDIR}/${PROJECT_NAME}-${PROJECT_VERSION}" CACHE PATH "Installation directory for OpenCMISS cmake package configure file.")
+set(OpenCMISS_INSTALL_PKGCONFIG_SUBDIR "${OpenCMISS_INSTALL_DATA_SUBDIR}${OpenCMISS_INSTALL_PKGCONFIG_SUBDIR}" CACHE PATH "Installation directory for OpenCMISS pkgconfig (.pc) files.")
+
+mark_as_advanced(OpenCMISS_INSTALL_INCLUDE_SUBDIR OpenCMISS_INSTALL_CMAKE_SUBDIR OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR OpenCMISS_INSTALL_PKGCONFIG_SUBDIR)
 
 # Options for library type
 set(OpenCMISS_BUILD_SHARED_LIBRARIES ON CACHE BOOL "Build shared OpenCMISS libraries." FORCE)
@@ -345,9 +355,13 @@ set(OpenCMISS_Fortran_SUFFIX "_Fortran")
 set(OpenCMISS_C_SUFFIX "_C")
 set(OpenCMISS_Python_SUFFIX "_Python")
 set(OpenCMISS_Doxygen_SUFFIX "_Doxygen")
+set(OpenCMISS_INCLUDE_SUBSUBDIR "opencmiss")
 set(OpenCMISS_Python_PACKAGE_NAME "opencmiss")
 set(OpenCMISS_Python_PACKAGE_MODULE_NAME "opencmiss")
 set(OpenCMISS_Python_MODULE_NAME "${OpenCMISS_TARGET_NAME}${OpenCMISS_Python_SUFFIX}")
+
+# Install directories
+
 
 # Main target names
 set(OpenCMISS_SHARED_Fortran_TARGET "${OpenCMISS_TARGET_NAME}${OpenCMISS_SHARED_SUFFIX}${OpenCMISS_Fortran_SUFFIX}")
@@ -425,7 +439,7 @@ foreach(_target ${OpenCMISS_Fortran_TARGETS})
     ${OpenCMISS_INC_DIR}
     ${OpenCMISS_GEN_INC_DIR}
     INTERFACE
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_INC_DIR}>/opencmiss
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_INCLUDE_SUBDIR}>
   )
   # Dont use "USE MPI" instructions if the precompiled mpi module files are incompatible.
   # This happens when the fortran compiler used to build mpi differs from the currently used one.
@@ -508,7 +522,7 @@ endforeach()
 
 # Handle bindings generation with target
 set(OpenCMISS_GEN_BINDINGS_C_DIR "${OpenCMISS_GEN_BINDINGS_DIR}/c")
-set(OpenCMISS_OPENCMISS_H "${OpenCMISS_GEN_BINDINGS_C_DIR}/opencmiss/opencmiss.h")
+set(OpenCMISS_OPENCMISS_H "${OpenCMISS_GEN_BINDINGS_C_DIR}${OpenCMISS_INSTALL_INC_SUBSUBDIR}/opencmiss.h")
 set(OpenCMISS_OPENCMISS_C_F90 "${OpenCMISS_GEN_SRC_DIR}/opencmiss_c.F90")
 set(LibOpemCMISS_GEN_C_BINDINGS_TARGETS OpenCMISS_OPENCMISS_H OpenCMISS_OPENCMISS_C_F90)
 
@@ -548,20 +562,20 @@ if(OpenCMISS_WITH_C_BINDINGS)
   foreach(_target ${OpenCMISS_C_TARGETS})
     target_include_directories(${_target}
       PRIVATE
-      ${OpenCMISS_INC_DIR}
-      ${OpenCMISS_GEN_BINDINGS_C_DIR}/opencmiss
-      ${OpenCMISS_GEN_INC_DIR}
+      $<BUILD_INTERFACE:${OpenCMISS_INC_DIR}>
+      $<BUILD_INTERFACE:${OpenCMISS_GEN_BINDINGS_C_DIR}>
+      $<BUILD_INTERFACE:${OpenCMISS_GEN_INC_DIR}>
       INTERFACE
-      $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_INC_DIR}>/opencmiss
+      $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_INCLUDE_SUBDIR}>
     )
     generate_export_header(${_target}
       EXPORT_MACRO_NAME OPENCMISS_C_EXPORT
       DEPRECATED_MACRO_NAME OPENCMISS_C_DEPRECATED
       NO_EXPORT_MACRO_NAME OPENCMISS_C_NO_EXPORT
       NO_DEPRECATED_MACRO_NAME OPENCMISS_C_NO_DEPRECATED
-      EXPORT_FILE_NAME "${OpenCMISS_GEN_BINDINGS_C_DIR}/opencmiss/opencmiss_c_export.h"
+      EXPORT_FILE_NAME "${OpenCMISS_GEN_BINDINGS_C_DIR}${OpenCMISS_INSTALL_INC_SUBSUBDIR}/opencmiss_c_export.h"
     )
-    list(APPEND OpenCMISS_INSTALL_C_INCLUDE_FILES "${OpenCMISS_GEN_BINDINGS_C_DIR}/opencmiss/opencmiss_c_export.h")
+    list(APPEND OpenCMISS_INSTALL_C_INCLUDE_FILES "${OpenCMISS_GEN_BINDINGS_C_DIR}${OpenCMISS_INSTALL_INC_SUBSUBDIR}/opencmiss_c_export.h")
     list(APPEND OpenCMISS_INSTALL_TARGETS ${_target})
   endforeach()
 endif()
@@ -635,7 +649,11 @@ if(OpenCMISS_WITH_Python_BINDINGS)
     generate_python_bindings
     ${OpenCMISS_SHARED_C_TARGET}
   )
-  target_include_directories(${OpenCMISS_Python_MODULE_TARGET} PRIVATE ${OpenCMISS_SHARED_C_TARGET} Python::NumPy Python::Python)
+  target_include_directories(${OpenCMISS_Python_MODULE_TARGET}
+    PRIVATE
+    ${OpenCMISS_GEN_BINDINGS_C_DIR}
+    Python::NumPy
+    Python::Python)
   target_link_libraries(${OpenCMISS_Python_MODULE_TARGET} PUBLIC ${OpenCMISS_SHARED_C_TARGET} Python::Python)
   set_target_properties(${OpenCMISS_Python_MODULE_TARGET} PROPERTIES
     OUTPUT_NAME ${OpenCMISS_Python_MODULE_NAME}
@@ -647,9 +665,9 @@ if(OpenCMISS_WITH_Python_BINDINGS)
   )
   list(APPEND OpenCMISS_CLEANUP_FILES "${OpenCMISS_OPENCMISS_Python_WRAPPER_C}")
   # Set RPATH of installed python module to the library directory
-  #cmake_path(SET OpenCMISS_Python_MODULE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_LIB_DIR}/${OpenCMISS_Python_MODULE_DESTINATION_PREFIX}")
+  #cmake_path(SET OpenCMISS_Python_MODULE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_LIB_SUBDIR}/${OpenCMISS_Python_MODULE_DESTINATION_PREFIX}")
   #cmake_path(RELATIVE_PATH OpenCMISS_Python_MODULE_INSTALL_PATH
-  #  BASE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_LIB_DIR}"
+  #  BASE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_LIB_SUBDIR}"
   #  OUTPUT_VARIABLE _REL_INSTALL_PATH
   #)
   set(_REL_INSTALL_PATH "../../../../../")
@@ -659,7 +677,7 @@ if(OpenCMISS_WITH_Python_BINDINGS)
     )
   elseif(UNIX)
     set_target_properties(${OpenCMISS_Python_MODULE_TARGET} PROPERTIES
-      INSTALL_RPATH "\$ORIGIN/${_REL_INSTALL_PATH};\$ORIGIN/${_REL_INSTALL_PATH}/../lib;\$ORIGIN/${_REL_INSTALL_PATH}/../../no_mpi/lib;\$ORIGIN/${_REL_INSTALL_PATH}/../../no_mpi/lib64;\$ORIGIN/"
+      INSTALL_RPATH "\$ORIGIN/${_REL_INSTALL_PATH};\$ORIGIN/${_REL_INSTALL_PATH}/../lib;\$ORIGIN/${_REL_INSTALL_PATH}/../../mpi-none/lib;\$ORIGIN/${_REL_INSTALL_PATH}/../../mpi-none/lib64;\$ORIGIN/"
     )
   elseif(WIN32 AND NOT CYGWIN)
     set_target_properties(${OpenCMISS_Python_MODULE_TARGET} PROPERTIES
@@ -673,9 +691,9 @@ if(OpenCMISS_WITH_Python_BINDINGS)
   set(OpenCMISS_Python_MODULE_UTILS_PY ${OpenCMISS_GEN_BINDINGS_Python_DIR}/${OpenCMISS_Python_PACKAGE_NAME}/${OpenCMISS_Python_PACKAGE_MODULE_NAME}/_utils.py)
   configure_file(${OpenCMISS_BINDINGS_Python_DIR}/setup.py.in ${OpenCMISS_Python_SETUP_PY} @ONLY)
   if(WIN32)
-    file(TO_NATIVE_PATH "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_BIN_DIR}" NATIVE_LIBRARY_PATH)
+    file(TO_NATIVE_PATH "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_BIN_SUBDIR}" NATIVE_LIBRARY_PATH)
   else()
-    file(TO_NATIVE_PATH "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_LIB_DIR}" NATIVE_LIBRARY_PATH)
+    file(TO_NATIVE_PATH "${CMAKE_INSTALL_PREFIX}/${OpenCMISS_INSTALL_LIB_SUBDIR}" NATIVE_LIBRARY_PATH)
   endif()
   configure_file(${OpenCMISS_BINDINGS_Python_DIR}/${OpenCMISS_Python_PACKAGE_NAME}/__init__.py.in ${OpenCMISS_Python_PACKAGE_INIT_PY} @ONLY)
   configure_file(${OpenCMISS_BINDINGS_Python_DIR}/${OpenCMISS_Python_PACKAGE_NAME}/${OpenCMISS_Python_PACKAGE_MODULE_NAME}/__init__.py.in ${OpenCMISS_Python_MODULE_INIT_PY} @ONLY)
@@ -722,69 +740,75 @@ if(OpenCMISS_WITH_Doxygen)
   add_custom_target(${OpenCMISS_Doxygen_TARGET} DEPENDS ${OpenCMISS_Doxygen_TARGETS})
 endif()
 # Install steps
-set(OpenCMISS_INSTALL_CMAKE_DIR "${OpenCMISS_INSTALL_LIB_DIR}/cmake" CACHE PATH "Installation directory for OpenCMISS cmake files.")
-set(OpenCMISS_INSTALL_CMAKE_CONFIG_DIR "${OpenCMISS_INSTALL_LIB_DIR}/cmake/${PROJECT_NAME}-${PROJECT_VERSION}" CACHE PATH "Installation directory for OpenCMISS cmake package configure file.")
-set(OpenCMISS_INSTALL_PKGCONFIG_DIR "${OpenCMISS_INSTALL_DATA_DIR}/pkgconfig" CACHE PATH "Installation directory for OpenCMISS pkgconfig (.pc) files.")
 
 install(TARGETS ${OpenCMISS_INSTALL_TARGETS}
-  EXPORT "${PROJECT_NAME}-targets"
-  RUNTIME DESTINATION ${OpenCMISS_INSTALL_BIN_DIR}
+  EXPORT "${PROJECT_NAME}Targets"
+  RUNTIME DESTINATION ${OpenCMISS_INSTALL_BIN_SUBDIR}
   COMPONENT Runtime
-  ARCHIVE DESTINATION ${OpenCMISS_INSTALL_LIB_DIR}    
+  ARCHIVE DESTINATION ${OpenCMISS_INSTALL_LIB_SUBDIR}    
   COMPONENT Runtime
-  LIBRARY DESTINATION ${OpenCMISS_INSTALL_LIB_DIR}
+  LIBRARY DESTINATION ${OpenCMISS_INSTALL_LIB_SUBDIR}
   COMPONENT Development
-  INCLUDES DESTINATION ${OpenCMISS_INSTALL_INC_DIR}/opencmiss
+  INCLUDES DESTINATION ${OpenCMISS_INSTALL_INCLUDE_SUBDIR}
 )
 
 install(FILES
   "${CMAKE_Fortran_MODULE_DIRECTORY}/opencmiss.mod"
   "${CMAKE_Fortran_MODULE_DIRECTORY}/opencmiss_c.mod"
   "${CMAKE_Fortran_MODULE_DIRECTORY}/opencmissfortranc.mod"
-  DESTINATION ${OpenCMISS_INSTALL_INC_DIR}/opencmiss
+  DESTINATION ${OpenCMISS_INSTALL_INCLUDE_SUBDIR}
   COMPONENT Development
 )
 
 if(OpenCMISS_WITH_C_BINDINGS)
   install(FILES ${OpenCMISS_INSTALL_C_INCLUDE_FILES}
-    DESTINATION ${OpenCMISS_INSTALL_INC_DIR}/opencmiss
+    DESTINATION ${OpenCMISS_INSTALL_INCLUDE_SUBDIR}
     COMPONENT CBindings
   )
 endif()
 
 if(OpenCMISS_WITH_Python_BINDINGS)
   install(FILES ${OpenCMISS_Python_SETUP_PY}
-    DESTINATION ${OpenCMISS_INSTALL_LIB_DIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}
+    DESTINATION ${OpenCMISS_INSTALL_LIB_SUBDIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}
     COMPONENT PythonBindings)
   install(FILES ${OpenCMISS_Python_PACKAGE_INIT_PY}
-    DESTINATION ${OpenCMISS_INSTALL_LIB_DIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}${_Python_DESTINATION_PREFIX}/${OpenCMISS_Python_PACKAGE_NAME}
+    DESTINATION ${OpenCMISS_INSTALL_LIB_SUBDIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}${_Python_DESTINATION_PREFIX}/${OpenCMISS_Python_PACKAGE_NAME}
     COMPONENT PythonBindings)
   install(FILES ${OpenCMISS_Python_PACKAGE_INIT_PY} ${OpenCMISS_Python_MODULE_INIT_PY} ${OpenCMISS_OPENCMISS_PYTHON_PY} ${OpenCMISS_Python_MODULE_UTILS_PY}
-    DESTINATION ${OpenCMISS_INSTALL_LIB_DIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}${_Python_DESTINATION_PREFIX}/${OpenCMISS_Python_PACKAGE_NAME}/${OpenCMISS_Python_PACKAGE_MODULE_NAME}
+    DESTINATION ${OpenCMISS_INSTALL_LIB_SUBDIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}${_Python_DESTINATION_PREFIX}/${OpenCMISS_Python_PACKAGE_NAME}/${OpenCMISS_Python_PACKAGE_MODULE_NAME}
     COMPONENT PythonBindings)
   install(TARGETS ${OpenCMISS_Python_MODULE_TARGET}
-    DESTINATION ${OpenCMISS_INSTALL_LIB_DIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}${_Python_DESTINATION_PREFIX}/${OpenCMISS_Python_PACKAGE_NAME}/${OpenCMISS_Python_PACKAGE_MODULE_NAME}
+    DESTINATION ${OpenCMISS_INSTALL_LIB_SUBDIR}/${OpenCMISS_Python_PACKAGE_DESTINATION_PREFIX}${_Python_DESTINATION_PREFIX}/${OpenCMISS_Python_PACKAGE_NAME}/${OpenCMISS_Python_PACKAGE_MODULE_NAME}
     COMPONENT PythonBindings)  
 endif()
 
-install(EXPORT "${PROJECT_NAME}-targets"
+install(EXPORT "${PROJECT_NAME}Targets"
   NAMESPACE OpenCMISS::
-  DESTINATION ${OpenCMISS_INSTALL_CMAKE_CONFIG_DIR}
+  DESTINATION ${OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR}
   COMPONENT Development
 )
 include(CMakePackageConfigHelpers)
-configure_package_config_file("${OpenCMISS_CMAKE_DIR}/${PROJECT_NAME}-config.cmake.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
-  INSTALL_DESTINATION ${OpenCMISS_INSTALL_CMAKE_CONFIG_DIR}
+configure_package_config_file("${OpenCMISS_CMAKE_DIR}/${PROJECT_NAME}Config.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+  PATH_VARS
+  OpenCMISS_INSTALL_LIB_SUBDIR
+  OpenCMISS_INSTALL_INCLUDE_SUBDIR
+  OpenCMISS_INSTALL_BIN_SUBDIR
+  OpenCMISS_INSTALL_DATA_SUBDIR
+  OpenCMISS_INSTALL_DOC_SUBDIR
+  OpenCMISS_INSTALL_MAN_SUBDIR
+  OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR
+  OpenCMISS_INSTALL_PKGCONFIG_SUBDIR
+  INSTALL_DESTINATION ${OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR}
 )
-write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
+write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
   VERSION ${OpenCMISS_VERSION}
   COMPATIBILITY AnyNewerVersion
 )
 install(FILES 
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
-    DESTINATION ${OpenCMISS_INSTALL_CMAKE_CONFIG_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
+    DESTINATION ${OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR}
     COMPONENT Development
 )
 # Bundle fixup for iron shared library
