--- a/cmake/OpenCMISSConfig.cmake.in
+++ b/cmake/OpenCMISSConfig.cmake.in
@@ -4,6 +4,17 @@ set(OpenCMISS_MAJOR_VERSION "@OpenCMISS_MAJOR_VERSION@")
 set(OpenCMISS_MINOR_VERSION "@OpenCMISS_MINOR_VERSION@")
 set(OpenCMISS_PATCH_VERSION "@OpenCMISS_PATCH_VERSION@")
 
+set(OpenCMISS_INSTALL_DIR "@CMAKE_INSTALL_PREFIX@")
+
+set_and_check(OpenCMISS_LIBRARIES_DIR "@PACKAGE_OpenCMISS_INSTALL_LIB_SUBDIR@")
+set_and_check(OpenCMISS_INCLUDE_DIR "@PACKAGE_OpenCMISS_INSTALL_INCLUDE_SUBDIR@")
+set_and_check(OpenCMISS_BINARIES_DIR "@PACKAGE_OpenCMISS_INSTALL_BIN_SUBDIR@")
+set_and_check(OpenCMISS_DATA_DIR "@PACKAGE_OpenCMISS_INSTALL_DATA_SUBDIR@")
+#set_and_check(OpenCMISS_DOC_DIR "@PACKAGE_OpenCMISS_INSTALL_DOC_SUBDIR@")
+#set_and_check(OpenCMISS_MAN_DIR "@PACKAGE_OpenCMISS_INSTALL_MAN_SUBDIR@")
+set_and_check(OpenCMISS_CMAKE_CONFIG_DIR "@PACKAGE_OpenCMISS_INSTALL_CMAKE_PROJECT_CONFIG_SUBDIR@")
+#set_and_check(OpenCMISS_PKGCONFIG_DIR "@PACKAGE_OpenCMISS_PKGCONFIG_SUBDIR@")
+
 set(OpenCMISS_WITH_SINGLE_PRECISION @OpenCMISS_WITH_SINGLE_PRECISION@)
 set(OpenCMISS_WITH_LARGE_INDICES @OpenCMISS_WITH_LARGE_INDICES@)
 
@@ -19,6 +30,13 @@ set(OpenCMISS_WITH_ParMETIS @OpenCMISS_WITH_ParMETIS@)
 set(OpenCMISS_WITH_PETSc @OpenCMISS_WITH_PETSc@)
 set(OpenCMISS_WITH_SLEPc @OpenCMISS_WITH_SLEPc@)
 set(OpenCMISS_WITH_SUNDIALS @OpenCMISS_WITH_SUNDIALS@)
+
+set(OpenCMISS_Fortran_COMPILER "@CMAKE_Fortran_COMPILER@")
+set(OpenCMISS_C_COMPILER "@CMAKE_C_COMPILER@")
+set(OpenCMISS_CXX_COMPILER "@CMAKE_CXX_COMPILER@")
+set(OpenCMISS_MPI_Fortran_COMPILER "@MPI_Fortran_COMPILER@")
+set(OpenCMISS_MPI_C_COMPILER "@MPI_C_COMPILER@")
+set(OpenCMISS_MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
 
 # Handle dependencies
 include(CMakeFindDependencyMacro)
@@ -68,4 +86,19 @@ if(OpenCMISS_WITH_SUNDIALS)
   find_dependency(SUNDIALS "${OpenCMISS_SUNDIALS_VERSION}" REQUIRED)
 endif()
 
-include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
+
+if(TARGET OpenCMISS::OpenCMISS_Fortran)
+  set(OpenCMISS_Fortran_FOUND TRUE)
+endif()
+if(TARGET OpenCMISS::OpenCMISS_static_Fortran)
+  set(OpenCMISS_static_Fortran_FOUND TRUE)
+endif()
+if(TARGET OpenCMISS::OpenCMISS_C)
+  set(OpenCMISS_C_FOUND TRUE)
+endif()
+if(TARGET OpenCMISS::OpenCMISS_static_C)
+  set(OpenCMISS_static_C_FOUND TRUE)
+endif()
+
+check_required_components(OpenCMISS)
